// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnknownElement in development should render a warning 1`] = `
<span
  style={
    Object {
      "backgroundColor": "red",
      "color": "white",
    }
  }
>
  Node type is undefined
</span>
`;

exports[`UnknownElement in development should render a warning and the children 1`] = `
Array [
  <span
    style={
      Object {
        "backgroundColor": "red",
        "color": "white",
      }
    }
  >
    Node type is undefined
  </span>,
  <p>
    Foo
  </p>,
]
`;

exports[`UnknownElement in production should render null 1`] = `null`;

exports[`UnknownElement in production should render the children 1`] = `
<p>
  Bar
</p>
`;
